Update 1.1.2:
- Bugfixes
- /htsl giveitem <filename>
- Minor QoL changes