@@ -2,7 +2,7 @@
   "name": "HTSL",
   "creator": "BusterBrown1218",
   "description": "A Chat Triggers module made to make creating housing code easier!",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "entry": "index.js",
   "requires": ["axios", "Vigilance"]
 }
