@@ -1,4 +1,5 @@
-Update 1.1.2:
+Update 1.1.4:
 - Bugfixes
-- /htsl giveitem <filename>
+- Deprecated houseSpawn (Hypixel)
+- Added optional click delay setting for importing
 - Minor QoL changes
